add swap functionality

--- a/dexFrontEnd/package.json
+++ b/dexFrontEnd/package.json
@@ -2,6 +2,7 @@
   "name": "dex",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.1inch.io",
   "dependencies": {
     "@ant-design/icons": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
